--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
